{
  "common": {
    "error_load": "Error when loading data",
    "no_data": "Sorry! No data found",
    "save": "Save"
  },
  "detail_user": {
    "delete_user": {
      "alert": {
        "body": "Are you sure you want to delete this user?",
        "cancel": "Cancel",
        "delete": "Delete",
        "title": "Delete User"
      },
      "button_label": "Delete User"
    },
    "email": "Email",
    "full_name": "Full Name",
    "gender": "Gender",
    "id": "ID",
    "phone": "Phone",
    "select_status": {
      "active": "Active",
      "block": "Blocked",
      "graduated": "Graduated"
    },
    "status": "Status",
    "title": "Detail user"
  },
  "edit_user": {
    "back": "Back",
    "message": {
      "edit_fail": "User edition failed!",
      "edit_success": "User edition successful!"
    },
    "title": "Edit user information"
  },
  "layout": {
    "settings_tab": "Settings",
    "user_tab": "User"
  },
  "login": {
    "button": "Login",
    "demo_email": "Email demo is admin@example.com",
    "demo_message": "Welcome! 👋 This is a demo login screen!",
    "demo_password": "Password demo is 123456",
    "errors": {
      "email_invalid": "Invalid email format",
      "email_required": "Email is required",
      "password_min": "Password must be at least 6 characters",
      "password_required": "Password is required"
    },
    "form": {
      "email": "Email",
      "password": "Password"
    },
    "title": "Sign In"
  },
  "new_user": {
    "back": "Users",
    "form": {
      "create": "Create User",
      "email": "Email",
      "gender": "Gender",
      "gender_placeholder": "Select gender",
      "id": "Id",
      "name": "Full Name",
      "phone": "Phone Number"
    },
    "gender": {
      "female": "Female",
      "male": "Male",
      "other": "Other"
    },
    "message": {
      "create_fail": "Failed to create user!",
      "create_success": "User created successfully!"
    },
    "title": "Add User",
    "validate": {
      "email_invalid": "Invalid email",
      "phone_min": "Phone number must be at least 6 characters",
      "required": "is required"
    }
  },
  "settings": {
    "about": "About",
    "app_name": "App Name",
    "arabic": "Arabic",
    "english": "English",
    "generale": "General",
    "language": "Language",
    "logout": "Logout",
    "theme": {
      "dark": "Dark",
      "light": "Light",
      "system": "System",
      "title": "Theme"
    },
    "title": "Settings",
    "version": "Version",
    "vietnamese": "Vietnamese"
  },
  "users": {
    "button_apply_filter": "Apply",
    "button_reset_filter": "Reset Filter",
    "filter": "Filter",
    "order": "Order",
    "placeholder_search": "Search",
    "search_by": "Search by",
    "sort_by": "Sort by"
  }
}
