appId: ${APP_ID}
env:
  EMAIL: 'admin@example.com'
  PASSWORD: '123456'
tags:
  - util
---
- launchApp
- tapOn:
    id: 'email-input'
- inputText: ${EMAIL}
- runFlow: ../utils/hide-keyboard.yaml
- tapOn:
    id: 'password-input'
- inputText: ${PASSWORD}
- runFlow: ../utils/hide-keyboard.yaml
- tapOn:
    id: 'login-button'
- assertVisible: 'Search'
